<resources>
    <string name="app_name">App Lista Tarefa</string>
    <string name="app_name_NomeTarefa">Nome Tarefa</string>
    <string name="app_name_DescricaoTarefa">Descrição Tarefa</string>
    <string name="app_name_DataConclusao">Data Conclusão</string>
    <string name="app_name_Finalizar">Finalizar</string>
    <string name="app_name_Limpar">Limpar</string>
    <string name="text_Salvar">Salvar</string>
    <string name="app_name_Concluir">Concluir</string>
</resources>