<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.MainActivity">

    <EditText
        android:id="@+id/editNomeTarefa"
        android:layout_width="380dp"
        android:layout_height="48dp"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:hint="@string/app_name_NomeTarefa"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:textAlignment="center"
        app:layout_constraintTop_toBottomOf="@+id/txt_Titulo"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="15dp" />

    <EditText
        android:id="@+id/editDescTarefa"
        android:layout_width="380dp"
        android:layout_height="48dp"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:hint="@string/app_name_DescricaoTarefa"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:textAlignment="center"
        app:layout_constraintTop_toBottomOf="@+id/editNomeTarefa"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="15dp" />

    <EditText
        android:id="@+id/editDataConclusao"
        android:layout_width="380dp"
        android:layout_height="48dp"
        android:layout_marginTop="28dp"
        android:ems="10"
        android:hint="@string/app_name_DataConclusao"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:textAlignment="center"
        app:layout_constraintTop_toBottomOf="@+id/editDescTarefa"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="15dp" />

    <TextView
        android:id="@+id/txt_Titulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:text="App Lista de Tarefas"
        android:textColor="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="HardcodedText" />

    <Button
        android:id="@+id/btn_Limpar"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="244dp"
        android:backgroundTint="#93BEDF"
        android:hint="@string/app_name_Limpar"
        android:textColorHint="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.12"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_Salvar"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="244dp"
        android:backgroundTint="#92BDDE"
        android:hint="@string/text_Salvar"
        android:textColorHint="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.927"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_Concluir"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="172dp"
        android:backgroundTint="#91BCDD"
        android:hint="@string/app_name_Concluir"
        android:textColorHint="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_Finalizar"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="44dp"
        android:backgroundTint="#91BCDD"
        android:hint="@string/app_name_Finalizar"
        android:textColorHint="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>